Supercluster/Cluster02/NetBox/Namespace.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    name: netbox
    app: netbox
    owner: EliasDH
    environment: production
  annotations:
    description: This namespace is used for the netbox application.
    contact: info@eliasdh.com
---
