Supercluster/Cluster02/NetBox/Service.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: netbox-postgresql
  namespace: netbox
spec:
  selector:
    app: netbox-postgresql
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: netbox-redis
  namespace: netbox
spec:
  selector:
    app: netbox-redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
spec:
  selector:
    app: netbox
  ports:
  - port: 80
    targetPort: 8080
---
